# extrace

./: .gitignore  Android.mk  CMakeLists.txt  README.md  doxyfile  example.out  makefile
docs/design/: action-environment.puml  android-interface.puml  arguments.puml  atrace-component-init.puml  atrace-component-model.puml  builder.cpp  class.plantuml  class.puml  class_action.puml  class_atrace.puml  class_domain.puml  class_extensible.puml  cmdlineapp-interface.puml  ftrace-interface.puml  ftraceentry.puml  kernel.puml  processchange.puml  procmem.puml
docs/domain/: domain.puml  domain_new.puml  domain_simple.puml
src/: abstractconsoleapp.cpp  abstractconsoleapp.h  abstracttraceaction.h  action.h  actioncmdlinebuilder.h  actionrunner.cpp  actionrunner.h  actionrunner_impl.cpp  actionrunner_impl.h  actionrunnerbuilder.cpp  actionrunnerbuilder.h  actionsrunner.cpp  actionsrunner.h  addandroidcoretotrace.cpp  addandroidcoretotrace.h  addkernelcategoriesfromfiletotrace.cpp  addkernelcategoriesfromfiletotrace.h  android.h  android_impl.cpp  android_impl.h  androidentrycreator.cpp  androidentrycreator.h  androidentrycreator_test.cpp  androidsystem.h  androidsystem_impl.cpp  androidsystem_impl.h  androidsystembuilder.cpp  androidsystembuilder.h  androidtoolbox.cpp  androidtoolbox.h  androidtoolbox_test.cpp  androidtracecategory.cpp  androidtracecategory.h  androidtracesystem.h  androidtracesystembuilder.cpp  androidtracesystembuilder.h  argsparser.cpp  argsparser.h  argsparser_test.cpp  arguments.cpp  (+229 more)
src/parser/: entry.cpp  entry.h  entrycreator.h  entryfile.h  entryfile_test.cpp  entryfilecreator.h  extrace_file.cpp  extracefile.cpp  extracefile.h  extracefile_test.cpp  fakeentrycreator.h  ftraceentry.cpp  ftraceentry.h  ftraceentrybynamecreator.h  ftraceentryfile.h  ftraceentryfilecreator.h  mock_entryfile.h  mock_ftraceentrycreator.h  mock_process.h  mockentriesfilecreator.h  parser.h  parser_test.cpp  process.cpp  process.h  processchange.cpp  processchange.h  processchangefile.h  processrecord.cpp  processrecord.h  processrecordfile.h  processrecordfile_test.cpp  processstat.cpp  processstat.h  schedswitchentrycreator.cpp  schedswitchentrycreator.h  schedswitchentrycreator_test.cpp  schedwakeupentrycreator.h  schedwakeupentrycreator_test.cpp  simpleentrycreator.h  simpleentryfile.h  (+13 more)
templates/: mock_templateinterface.h  templateclass.cpp  templateclass.h  templateclass_test.cpp  templateinterface.h
